계정삭제, 소식, 그룹정보 변경, 그룹관리자 변경 남음
